tests/fixtures/invalid/struct_forward_declaration.c
struct Point;
int main(void) {
    return 0;
}
